Fix layout bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,6 +43,7 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
 	line-height: 1;
+  margin: 0;
 }
 
 h1 {
@@ -163,7 +164,7 @@ input, textarea, select, .uneditable-input {
 }
 
 .field_with_errors {
-  @extend .control-groupt;
+  @extend .control-group;
   @extend .error;
 }
 
